# sessionrunner

./: .gitignore  Cargo.toml  GUI.md  Makefile  README.md  make_release.sh
.github/workflows/: release.yml
rootfs/usr/lib/: os-session-select
rootfs/usr/lib/sessionrunner/: default.service  restart_session.service  steamdeck.service
rootfs/usr/share/dbus-1/system.d/: org.neroreflex.sessionrunner.conf
rootfs/usr/share/wayland-sessions/: sessionrunner.desktop
sessionexec/: Cargo.toml
sessionexec/src/: plasma.rs
sessionrunner/: Cargo.toml
sessionrunner/src/: dbus.rs  errors.rs  lib.rs  main.rs  manager.rs  node.rs  signal.rs
sessionrunner/src/sessionctl/: main.rs
sessionrunner/src/sessionexec/: cstr.rs  gamescope.rs  runner.rs
sessionrunner/src/tests/: desc.rs
src/: desc.rs  lib.rs
src/sessionexec/: execve.rs  mod.rs  plasma.rs
src/tests/: desc.rs  mod.rs
start-sessionrunner/: Cargo.toml
start-sessionrunner/src/: main.rs
test_data/test_restart/: default.service
