[package]
name = "sessionrunner"
version = "0.9.1"
description = "A manager for user sessions."
homepage = "https://github.com/NeroReflex/sessionrunner"
authors = ["Denis Benato <benato.denis96@gmail.com>"]
edition = "2021"
license-file = "LICENSE.md"

[[bin]]
name = "sessionexec"
path = "src/bin/sessionexec/main.rs"

[[bin]]
name = "sessionrunnerctl"
path = "src/bin/sessionctl/main.rs"

[[bin]]
name = "start-sessionrunner"
path = "src/bin/start-sessionrunner/main.rs"

[dependencies]
argh = "^0"
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "sync", "signal", "process", "time", "fs", "io-util"] }
thiserror = "^2"
zbus = "^5"
libc = { version = "*" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
rust-ini = { version = "*" }

[package.metadata.deb]
license-file = ["LICENSE.md", "4"]
extended-description = """\
A manager for user sessions."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/sessionrunner", "usr/bin/", "755"],
    ["target/release/sessionrunnerctl", "usr/bin/", "755"],
    ["target/release/start-sessionrunner", "usr/bin/", "755"],
    ["rootfs/usr/share/wayland-sessions/sessionrunner.desktop", "usr/share/wayland-sessions/", "755"],

    ["target/release/sessionexec", "usr/bin/", "755"],
    ["rootfs/usr/lib/os-session-select", "usr/lib/", "755"],
    ["rootfs/usr/lib/sessionexec/session-return.sh", "usr/lib/", "755"],
    ["rootfs/usr/share/applications/org.sessionexec.session-return.desktop", "usr/share/applications/", "755"],
    ["rootfs/usr/lib/sessionrunner/steamdeck.service", "usr/lib/sessionrunner/", "644"],
    ["rootfs/usr/lib/sessionrunner/restart_session.service", "usr/lib/sessionrunner/", "644"],
]
