[package]
name = "sessionexec"
version = "1.0.0"
description = "Starts the user desktop environment of choice."
homepage = "https://github.com/NeroReflex/sessionrunner"
authors = ["Denis Benato <benato.denis96@gmail.com>"]
edition = "2021"
license-file = "../LICENSE.md"

[dependencies]
rust-ini = { version = "*" }
libc = { version = "*", features = [] }

[package.metadata.deb]
license-file = ["../LICENSE.md", "4"]
extended-description = """\
Starts the user desktop environment of choice."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/sessionexec", "usr/bin/", "755"],
    ["../rootfs/usr/lib/os-session-select", "usr/lib/", "755"],
    ["../rootfs/usr/lib/sessionexec/session-return.sh", "usr/lib/", "755"],
    ["../rootfs/usr/share/applications/org.sessionexec.session-return.desktop", "usr/share/applications/", "755"],
    ["../rootfs/usr/lib/sessionrunner/steamdeck.service", "usr/lib/sessionrunner/", "644"],
    ["../rootfs/usr/lib/sessionrunner/restart_session.service", "usr/lib/sessionrunner/", "644"],
]
