[package]
name = "sessionrunner"
version = "0.9.0"
description = "A manager for user sessions."
homepage = "https://github.com/NeroReflex/login_ng"
authors = ["Denis Benato <benato.denis96@gmail.com>"]
edition = "2021"
license-file = "../LICENSE.md"

[[bin]]
name = "sessionrunnerctl"
path = "src/sessionctl/main.rs"

[dependencies]
argh = "^0"
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "sync", "signal", "process", "time", "fs", "io-util"] }
thiserror = "^2"
zbus = "^5"
libc = { version = "*" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

[package.metadata.deb]
license-file = ["../LICENSE.md", "4"]
extended-description = """\
A manager for user sessions."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/sessionrunner", "usr/bin/", "755"],
    ["target/release/sessionrunnerctl", "usr/bin/", "755"],
    ["../rootfs/usr/bin/start-sessionrunner", "usr/bin/", "755"],
    ["../rootfs/usr/share/wayland-sessions/sessionrunner.desktop", "usr/share/wayland-sessions/", "755"],
]
